syntax = "proto3";

option go_package = "github.com/whale-team/whaleEcho/pkg/echoproto";
import "enum.proto";

message Command {
  CommandType type = 1;
  bytes payload = 2;
}

message User {
  string uid = 2;
  string name = 3;
  string room_uid = 4;
}

message Room {
  string uid = 2;
  string name = 3;
  string creator_name = 5;
  int64 members_limit = 6;
  int64 members_count = 7;
  int64 expired_at = 8;
}

message Message {
  string uid  = 1;
  string sender_name = 2;
  string room_uid = 3;
  string text = 4;
  bytes file = 5;
  string file_type = 6;
  MessageType type = 7;
  int64 sent_at = 8;
  Status status = 9;
  repeated string messages = 10;
}
